# autonomous-interview-interface

./: .env.example  .pnp.cjs  .replit  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  setup.sh  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  package.json  requirements.txt  test_embeddings.py
apps/api/app/: __init__.py  init_sample_data.py  main.py
apps/api/app/core/: auth.py  config.py  database.py  redis.py
apps/api/app/crud/: base.py  interview.py  user.py
apps/api/app/models/: base.py  interview.py  user.py
apps/api/app/prompts/: evaluation_assignment.txt  evaluation_multi_turn.txt  evaluation_objective.txt  follow_up_question.txt
apps/api/app/routers/: auth.py  interview.py  sessions.py
apps/api/app/schemas/: base.py  interview.py  user.py
apps/api/app/services/: auth_service.py  chroma_service.py  embeddings_service.py  evaluator_agent.py  llm_service.py
apps/api/chroma_data/: chroma.sqlite3
apps/web/: Dockerfile.prod  README.md  eslint.config.js  index.html  nginx.conf  package.json  stats.html  tailwind.config.js  vite.config.mjs  vite.config.ts
apps/web/src/: App.jsx  App.tsx  index.css  main.jsx
apps/web/src/components/: Completion.jsx  Completion.tsx  ConversationInterviewWindow.jsx  Instructions.jsx  InterviewWindow.jsx  InterviewWindow.tsx  LandingPage.jsx
apps/web/src/lib/: api.js  (+1 more)
attached_assets/: Pasted-Problem-Statement-AI-Powered-Excel-Mock-Interviewer-1-The-Business-Context-The-Why-Our-com-1757837220022_1757837220023.txt
docs/: ARCHITECTURE.md  DEBUGGING.md  QUICK_START.md  README.md  SETUP.md
scripts/: init-chroma.sh  init-db.sh
(+13 files in other folders)
