[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "aioredis>=2.0.1",
    "aiosmtplib>=4.0.2",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "authlib>=1.6.3",
    "black>=25.1.0",
    "chromadb>=1.0.21",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "flake8>=7.3.0",
    "groq>=0.31.1",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "mkautodoc>=0.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mypy>=1.18.1",
    "mypy-extensions>=1.1.0",
    "numpy>=2.3.3",
    "openai>=1.107.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.15.0",
    "pytest-xdist>=3.8.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=3.3.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "python-slugify>=8.0.4",
    "redis>=6.4.0",
    "sentry-sdk[fastapi]>=2.37.1",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "structlog>=25.4.0",
    "tqdm>=4.67.1",
    "types-python-dateutil>=2.9.0.20250822",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250913",
    "uvicorn[standard]>=0.35.0",
]
